# gradient_descent

./: .~lock.Матанализ отчёт.docx#  README.md  functions.py  gradient.py  graph.py  main.py  newton.py  pyproject.toml  pyrightconfig.json  rename.py  requirements.txt  visual.py  visualize_grad_des.py  Матанализ отчёт.docx  Проект.docx
reports/: .~lock.исходник.odt#  .~lock.рабочий.odt#  .~lock.статья.docx#  soprovoditelnoe_pismo.doc  Письмо.txt  СЛ.txt  Экспертное заключ (ЛГТУ)шаблон.docx  рабочий.docx  рабочий.odt  сопроводительное письмо.doc  статья.docx
reports/список литературы/: 5.djvu  6.djvu
