[tool.poetry]
name = "gradient_descent"
version = "0.1.0"
description = ""
authors = ["MR-Geri <ilya.kamckine@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
sklearn = "^0.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
